# olas-mcp-application-workflow

./: .env.example  .gitignore  README.md  SUPABASE_SETUP.md  api.py  app.py  enriched_services_data.json  init_supabase.py  init_supabase.sql  list-mech.json  mechs_data.json  models.py  privy_login_example.py  requirements.txt  requirements_privy.txt  run_app.sh  scrape_mechs.py  transaction_storage.py  updated_version-0.1.md  utils.py
components/: __init__.py  privy_auth.py  web3_wallet_component.py
docs/: tailwind.config.js
docs/src/pages/: index.tsx
scripts/: fetch-figma-components.js
src/: api.py  mcp_params.py
src/components/: auth_page.py  browser_extension.py  chat_dashboard.py  dashboard_page.py  execution_status.py  execution_status_mock.py  landing_page.py  mcp_app_list.py  mcp_wallet_onboarding.py  mech_client.py  mech_client_components.py  privy_auth.py  privy_auth_component.py  privy_iframe.html  process_payment.py  pyproject.toml  reasoning_feedback.py  request_form.py  request_form_mock.py  staking_info_rendering.py  styling.py  web3_wallet_component.py
src/data/: init_database.sql  init_supabase.py  transactions_mock_format.json
src/models/: __init__.py  models.py  request.py  session_state.py
src/pages/: app_execution_status_page.py  app_home_page.py  landing_page.py  login_page.py
src/services/: defillama_api.py  mcp_service.py  mock_mech_service.py
src/utils/: __init__.py  data_generators.py  defillama_utils.py  execution_utils.py  privy_rest_api.py  session_state.py  supabase_utils.py  transaction_storage.py
utils/: privy_utils.py
(+2 files in other folders)
