[tool.poetry]
name = "olas-mcp"
version = "0.1.0"
description = "OLAS MCP Project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

# Core requirements from the root folder
requests = "^2.28.1"
pandas = "^1.5.0"

# Additional requirements from packages/olas-mcp-server
flask = "^2.2.2"
sqlalchemy = "^1.4.39"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"